--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,8 @@ li {
     color: var(--text-h);
   }
 
+
+/* ====================MODAL====================== */
   .backdrop {
       position: fixed;
       top: 0;
@@ -139,8 +141,7 @@ li {
 .backdrop.is-hidden {
      opacity: 0;
      pointer-events: none;
-    
-    
+        
 }
 .modal {
       
@@ -191,7 +192,7 @@ li {
     fill: var(--fill);
 }
 
-
+/* ====================/ MODAL====================== */
    
 /* Logo */
 
@@ -326,19 +327,6 @@ nav {
     align-items: center;
 }
 
-.item-contacts:hover .contacts-link-header {
-
-    color: var(--fill);
-}
-
-.item-contacts:focus .contacts-link-header {
-
-    color: var(--fill);
-}
-.icon-link-header:hover .contacts-link-header {
-  
-    color: var(--fill);
-}
 
 .header-contacts {
     display: flex;
@@ -757,6 +745,10 @@ address {
     color: var(--background-color);
 }
 
+.wrapper-footer a {
+
+    margin-right: 0;
+}
 .contacts a {
     display: block;
     margin-top: 9px;
@@ -822,13 +814,14 @@ address {
 
 .wrapper-footer .form-subscription {
 
-     margin-left: 93px; 
-   
+        margin-left: 93px; 
+     
 }
 
 .form-subscription input {
 
     width: 358px;
+    height: 50px;
     margin: 0;
     padding-left: 16px;
     padding-top: 15px;
@@ -838,13 +831,7 @@ address {
     border-radius: 4px;
     background-color: var(--background-secondary);
 
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    color: var(--background-color)
+    
 
 }
 
@@ -854,23 +841,26 @@ address {
 
 }
 
-.form-subscription .subscribe {
+.form-subscription .subscribe-btn {
 
     width: 200px;
+    height: 50px;
     margin-left: 12px;
     padding-left: 0px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 0;
+    border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
     background-color: var(--fill);
+    
 
 }
 
 
- .subscribe .btn-subscribe-name {
+ .subscribe-btn .btn-subscribe-name {
 
     display: flex;
     justify-content: center;
