--- a/css/style.css
+++ b/css/style.css
@@ -124,79 +124,9 @@ li {
   }
 
 
-/* ====================MODAL====================== */
-  .backdrop {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-
-      background-color: var(--backdrop);
-      opacity: 1;
-      transition:  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
-  }
-
-.backdrop.is-hidden {
-     opacity: 0;
-     pointer-events: none;
-        
-}
-.modal {
-      
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) scale(1);
-    
-    width: 528px;
-    height: 581px;
-    
-    background-color: var(--background-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    opacity: 1;
-   
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden .modal {
-
-    transform: translate(-50%,-50%) scale(0);
-    opacity: 0;
- }
-
-.modal-closed {
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    
-    background-color: var(--background-color);
-    border: 1px solid rgba(0, 0, 0, 0.1); 
-}
-.icon-closed-modal {  
-
-    height: 11px;
-    width: 11px;
-             
-}
-.modal-closed:hover use{
-    fill: var(--fill);
-}
-
-/* ====================/ MODAL====================== */
-   
-/* Logo */
-
-a.logo {
+  /* Logo */
+  
+  a.logo {
     font-family: 'Raleway', sans-serif ;
     font-weight: 700;
     font-size: 26px;
@@ -257,7 +187,7 @@ nav {
     padding-bottom: 32px;
 
     color: var(--text-h);
-  
+    
 }
 
 .item:hover a {
@@ -299,10 +229,10 @@ nav {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .item-contacts .email{
-   
+    
     width: 16px;
     height: 12px;
-   
+    
 }
 
 .item-contacts .phone {
@@ -341,7 +271,7 @@ nav {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-
+    
     color: var(--main-text);
 }
 
@@ -364,11 +294,11 @@ nav .nav-items .item {
     justify-content: center;
     align-items: center;
  }
-
  
-/* Hero */
+ 
+ /* Hero */
 
-.hero {
+ .hero {
     max-width: 1600px;
     min-height: 600px;
     margin: 0 auto;
@@ -413,10 +343,10 @@ nav .nav-items .item {
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-   
+    
     color: var(--background-color);
     background-color: var(--fill);
-
+    
 } 
 
 /* Features */
@@ -428,9 +358,9 @@ nav .nav-items .item {
     
 }
  .features-list {
-
+     
     display: flex;
- }
+}
 
 
 .features-list h3 {
@@ -440,7 +370,7 @@ nav .nav-items .item {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
+    
     color: var(--text-h);
 }
 
@@ -453,7 +383,7 @@ nav .nav-items .item {
 }
 
 .features-list p {
-
+    
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
@@ -542,7 +472,7 @@ img {
 }
 
 .our-team-list {
-
+    
     display: flex;
     justify-content: center;
 }
@@ -554,7 +484,7 @@ img {
 }
 
 .wrapper-description {
-
+    
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
@@ -569,7 +499,7 @@ img {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-
+    
     color: var(--text-h);
 }
 
@@ -581,7 +511,7 @@ img {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-
+    
     color: var(--main-text);
 }
 
@@ -594,7 +524,7 @@ img {
 }
 
 .icon-social-links-wrapper {
-
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -614,7 +544,7 @@ img {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
 
-           
+    
 }
 
 .social-links-icon {
@@ -625,7 +555,7 @@ img {
     transition-property:  fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
-
+    
 }
 
 .social-link:hover,
@@ -639,21 +569,21 @@ img {
 }
 
 .social-link:focus .social-links-icon {
-
+    
     fill: var(--background-color);
 }
 
 /* Regular customers */
 
 .regular-customers{
-
+    
     padding-top: 94px;
     padding-bottom: 94px;
 }
 .regular-customers h2 {
 
     margin-bottom: 50px;
-           
+    
 }
 
 .regular-customers-list {
@@ -671,12 +601,12 @@ img {
 }
 
 .regular-client + .regular-client {
-
+    
     margin-left: 30px;
 }
 
 .regular-client-link {
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -685,7 +615,7 @@ img {
     border: 1px solid var(--icon-still);
     box-sizing: border-box;
     border-radius: 4px;
-
+    
     transition-property:  border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
@@ -701,13 +631,13 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .regular-client-link:hover .client-logo  {
-
+    
     fill: var(--fill);
   
 }
 
 .regular-client-link:focus .client-logo  {
-
+    
     fill: var(--fill);
   
 }
@@ -716,7 +646,7 @@ img {
 .regular-client-link:focus {
 
      border: 1px solid var(--fill);
-
+     
 }
 /* Footer */
 
@@ -737,11 +667,11 @@ address {
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
-
+    
     color: var(--background-color);
 }
 .logo span:nth-child(2) {
-
+    
     color: var(--background-color);
 }
 
@@ -758,9 +688,9 @@ address {
 }
 
 .wrapper-footer h3{
-
+    
     margin-bottom: 20px;
-
+    
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -771,11 +701,11 @@ address {
 
 .icon-social-links-footer {
     
-        margin-left: 70px;
+    margin-left: 70px;
 }
 
 .social-links-list-footer {
-
+    
     display: flex;
     flex-wrap: nowrap;
 }
@@ -794,11 +724,11 @@ address {
 }
 
 .social-link-footer svg {
-
+    
     fill: var(--background-color);
 }
 .social-link-icon-footer  + .social-link-icon-footer {
-
+    
     padding-left: 10px;
 }
 
@@ -814,12 +744,12 @@ address {
 
 .wrapper-footer .form-subscription {
 
-        margin-left: 93px; 
+    margin-left: 93px; 
      
 }
 
 .form-subscription input {
-
+    
     width: 358px;
     height: 50px;
     margin: 0;
@@ -853,7 +783,7 @@ address {
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-
+    
     background-color: var(--fill);
     
 
@@ -861,11 +791,11 @@ address {
 
 
  .subscribe-btn .btn-subscribe-name {
-
+     
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     font-family: Roboto;
     font-style: normal;
     font-weight: 700;
@@ -918,7 +848,7 @@ address {
     padding: 6px 22px;
     min-width: 128px;
     min-width: 38px;
-
+    
     border: 0px;
     border-radius: 4px;
     
@@ -929,10 +859,10 @@ address {
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
-
+    
     color: var(--text-h);
     background-color: var(--background-btn-still);
-
+    
     transition-property:  color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -948,9 +878,9 @@ address {
 }
 
 .projecrts-cards-list h3 {
-
+    
     margin-bottom: 4px;
-
+    
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -989,7 +919,7 @@ address {
 
 .projects-cards:hover,
 .projects-cards:focus {
-
+    
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -1030,8 +960,150 @@ address {
 }
 
 .projects-cards:hover .description-card-text {
-
+    
     transform: translateY(0%);
     opacity: 1;
 }
 
+
+/* ====================MODAL====================== */
+  .backdrop {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      background-color: var(--backdrop);
+      opacity: 1;
+      transition:  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+  }
+
+.backdrop.is-hidden {
+     opacity: 0;
+     pointer-events: none;
+        
+}
+.modal {
+      
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(1);
+    
+    width: 528px;
+    height: 581px;
+    
+    background-color: var(--background-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    opacity: 1;
+   
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+
+    transform: translate(-50%,-50%) scale(0);
+    opacity: 0;
+ }
+
+.modal-closed-btn {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    
+    background-color: var(--background-color);
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+}
+.icon-closed-modal {  
+
+    height: 11px;
+    width: 11px;
+             
+}
+.modal-closed-btn:hover svg {
+
+    fill: var(--fill);
+}
+
+.registration-form {
+
+    padding: 40px;
+}
+
+.registration-form h2 { 
+    
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.registration-form input {
+
+    width: 100%;
+    margin-top: 4px;
+    
+}
+.registration-form textarea {
+
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+    resize: none;
+}
+
+.registration-form label:not(:last-child) {
+    
+    display: block;
+    margin-bottom: 10px;
+}
+
+.agree-with-contract {
+    
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+        
+}
+
+    .agree-with-contract + label {
+        position: relative;
+        padding: 0 0 0 60px;
+        cursor: pointer;
+}
+
+
+.submit-btn  {
+
+   
+    width: 200px;
+    height: 50px;
+    
+    background-color: var(--fill);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--background-color);
+}
+/* ====================/ MODAL====================== */
+   
