--- a/css/style.css
+++ b/css/style.css
@@ -1042,6 +1042,8 @@ address {
 
 .registration-form h2 { 
     
+  
+    margin-bottom: 12px;
     font-family: Roboto;
     font-style: normal;
     font-size: 20px;
@@ -1049,12 +1051,45 @@ address {
     letter-spacing: 0.03em;
 }
 
+.signup-form {
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    
+    color: var(--main-text);
+}
+
+
 .registration-form input {
 
     width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     margin-top: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
     
 }
+
+.registration-form input:focus,
+.registration-form input:hover {
+
+    border: 1px solid var(--fill);
+    outline: none;
+    cursor: pointer;
+}
+
+.registration-form input:focus+ .icon-form-svg {
+
+    fill: var(--fill);
+}
+
 .registration-form textarea {
 
     width: 100%;
@@ -1063,12 +1098,39 @@ address {
     margin-top: 4px;
     margin-bottom: 20px;
     resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+.registration-form textarea:focus,
+.registration-form textarea:hover {
+
+    border: 1px solid var(--fill);
+    outline: none;
+    cursor: pointer;
+
 }
 
-.registration-form label:not(:last-child) {
+.registration-form label:nth-child(-n+3) {
     
     display: block;
     margin-bottom: 10px;
+}
+
+.icon-form-wrapper {
+
+    position: relative;
+    
+}
+.icon-form-wrapper .icon-form-svg {
+    
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 15px;
+    fill: var(--text-h);
+    
 }
 
 .agree-with-contract {
@@ -1076,21 +1138,43 @@ address {
         position: absolute;
         z-index: -1;
         opacity: 0;
-        
-}
 
-    .agree-with-contract + label {
-        position: relative;
-        padding: 0 0 0 60px;
-        cursor: pointer;
-}
+                  
+ }
 
-
-.submit-btn  {
-
+ .agree-with-contract + label {
+     position: relative;
+     padding: 0 0 0 60px;
+     cursor: pointer;
+    }
+    
+ .checkbox-label {
+         
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.78;
+    letter-spacing: 0.03em;
+    color: var(--main-text);
    
+    }
+   
+    .checkbox-label .contract-link{
+   
+       text-decoration: underline;
+       color: var(--fill); 
+        
+    }
+    
+    .submit-btn  {
+        
     width: 200px;
     height: 50px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
     
     background-color: var(--fill);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1104,6 +1188,13 @@ address {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--background-color);
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+
+    background: #188CE8;
+    outline: none;
 }
 /* ====================/ MODAL====================== */
    
