--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ li {
 
 .visually-hidden {
     position: absolute;
+    left: 0;
+    bottom: 0;
     width: 1px;
     height: 1px;
     margin: -1px;
@@ -1053,6 +1055,8 @@ address {
 
 .signup-form {
 
+    position: relative;
+
     font-family: Roboto;
     font-style: normal;
     font-weight: 400;
@@ -1133,10 +1137,14 @@ address {
     
 }
 
-.checkbox-hidden-wrapp {
 
-    position: relative;
+
+.checkbox-hidden-wrapp .checkbox-label {
+
+    display: flex;
+    align-items: center;
 }
+
 .checkbox-label::before {
 
     content: '';
@@ -1154,7 +1162,7 @@ address {
 .agree-with-contract:checked + .checkbox-label::before  {
 
     border: none;
-    background-image: url(./images/icon-checkin.svg);
+    background-image: url(/images/icon-checkin.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
