--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,7 @@ address {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: var(--background-secondary);
- 
+    color: var(--main-text);
 
 }
 
